routes/portal-frontend-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portal-frontend
  namespace: gloo-system
spec:
  parentRefs:
    - name: gw
      namespace: ingress-gw
      sectionName: http
  hostnames:
    - developer.example.com
  rules:
    # Routes through the OAuth flow for the Portal API (i.e. OAuth interactive login flow)
    - matches:
      - path:
          type: PathPrefix
          value: /v1/login
      - path:
          type: PathPrefix
          value: /v1/logout
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: routeoption-portal
      backendRefs:
        - name: portal-frontend
          port: 4000
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: portal-frontend
          port: 4000
